Errors and crashes with BoneCollection properties due to "id_us_min: ID user decrement error" #116061

Closed
opened 2023-12-11 20:08:12 +01:00 by Mustard · 3 comments

Blender Version
Broken: 4.0.0, 4.0.1 and 4.0.2

Short description of error
id_us_min errors when adding a PropertyGroup (containing Object or Collection PointerProperty) as PointerProperty to any BoneCollection, and then fill the PointerProperty(s) with an Object or a Collection.

Example of the code:

class ArmatureBoneCollection(bpy.types.PropertyGroup):
    coll: bpy.props.PointerProperty(name="Collection", type=bpy.types.Collection)
    obj: bpy.props.PointerProperty(name="Object", type=bpy.types.Object)

bpy.utils.register_class(ArmatureBoneCollection)                          
bpy.types.BoneCollection.ArmatureBoneCollection = bpy.props.PointerProperty(type=ArmatureBoneCollection)

Errors:

ERROR (bke.lib_id): C:\Users\blender\git\blender-v400\blender.git\source\blender\blenkernel\intern\lib_id.cc:337 id_us_min: ID user decrement error: GRCollection (from '[Main]'): 0 <= 0
ERROR (bke.lib_id): C:\Users\blender\git\blender-v400\blender.git\source\blender\blenkernel\intern\lib_id.cc:337 id_us_min: ID user decrement error: OBCube (from '[Main]'): 0 <= 0

Morever, the number of users of the added Object increases, eventually leading to poor performance and crashes, especially when a lot of Objects are added to the PropertyGroup on different BoneCollection(s).

image

Exact steps for others to reproduce the error
I provided a .blend file with a simple script to generate the error.

Steps:

  1. Run the script.
  2. Select one of the cubes.
  3. In the Python console, assign to any armature collection one of the objects with:
    bpy.data.armatures["Armature"].collections["Bones.003"].ArmatureBoneCollection.obj = bpy.context.active_object.
  4. Click on the bones.
  5. Errors start to appear in the console, and the number of users of the Objects (not the data) increases.
**Blender Version** Broken: 4.0.0, 4.0.1 and 4.0.2 **Short description of error** `id_us_min` errors when adding a `PropertyGroup` (containing `Object` or `Collection` `PointerProperty`) as `PointerProperty` to any `BoneCollection`, and then fill the `PointerProperty`(s) with an `Object` or a `Collection`. Example of the code: ```Py class ArmatureBoneCollection(bpy.types.PropertyGroup): coll: bpy.props.PointerProperty(name="Collection", type=bpy.types.Collection) obj: bpy.props.PointerProperty(name="Object", type=bpy.types.Object) bpy.utils.register_class(ArmatureBoneCollection) bpy.types.BoneCollection.ArmatureBoneCollection = bpy.props.PointerProperty(type=ArmatureBoneCollection) ``` Errors: ``` ERROR (bke.lib_id): C:\Users\blender\git\blender-v400\blender.git\source\blender\blenkernel\intern\lib_id.cc:337 id_us_min: ID user decrement error: GRCollection (from '[Main]'): 0 <= 0 ERROR (bke.lib_id): C:\Users\blender\git\blender-v400\blender.git\source\blender\blenkernel\intern\lib_id.cc:337 id_us_min: ID user decrement error: OBCube (from '[Main]'): 0 <= 0 ``` Morever, the number of users of the added Object increases, eventually leading to poor performance and crashes, especially when a lot of Objects are added to the PropertyGroup on different BoneCollection(s). ![image](/attachments/57e4424e-f4dd-4f95-b79f-013076c76380) **Exact steps for others to reproduce the error** I provided a .blend file with a simple script to generate the error. Steps: 1. Run the script. 2. Select one of the cubes. 3. In the Python console, assign to any armature collection one of the objects with: `bpy.data.armatures["Armature"].collections["Bones.003"].ArmatureBoneCollection.obj = bpy.context.active_object`. 4. Click on the bones. 5. Errors start to appear in the console, and the number of users of the Objects (not the data) increases.
Mustard added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-12-11 20:08:13 +01:00
Author

I just checked, and the same error occurs even if I don't use the PropertyGroup but PointerProperty(s) directly on the BoneCollection, i.e.,

bpy.types.BoneCollection.Coll = bpy.props.PointerProperty(name="Collection", type=bpy.types.Collection)
bpy.types.BoneCollection.Obj = bpy.props.PointerProperty(name="Object", type=bpy.types.Object)

I attached the .blend file with this case.

image

I just checked, and the same error occurs even if I don't use the PropertyGroup but PointerProperty(s) directly on the BoneCollection, i.e., ```Py bpy.types.BoneCollection.Coll = bpy.props.PointerProperty(name="Collection", type=bpy.types.Collection) bpy.types.BoneCollection.Obj = bpy.props.PointerProperty(name="Object", type=bpy.types.Object) ``` I attached the .blend file with this case. ![image](/attachments/280c97a3-aa7f-4798-8aca-335c0848a3e2)
Mustard changed title from Errors and crashes on BoneCollection due to "id_us_min: ID user decrement error" to Errors and crashes with BoneCollection properties due to "id_us_min: ID user decrement error" 2023-12-11 20:37:39 +01:00
Iliya Katushenock added
Module
Core
Status
Confirmed
Interest
Python API
and removed
Status
Needs Triage
labels 2023-12-13 11:35:37 +01:00
Sybren A. Stüvel added
Module
Animation & Rigging
and removed
Module
Core
labels 2024-01-11 11:20:34 +01:00
Sybren A. Stüvel self-assigned this 2024-01-11 11:59:47 +01:00
Sybren A. Stüvel added this to the 4.1 milestone 2024-01-11 11:59:53 +01:00
Sybren A. Stüvel added
Priority
High
Type
Bug
and removed
Priority
Normal
Type
Report
labels 2024-01-11 12:00:17 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-11 14:38:41 +01:00

Thanks for the detailed report @Mustard , it made things quite simple to reproduce!

Thanks for the detailed report @Mustard , it made things quite simple to reproduce!
Author

Thanks for the detailed report @Mustard , it made things quite simple to reproduce!

I'm glad I could help. Thank you for fixing this (and all your work)!

> Thanks for the detailed report @Mustard , it made things quite simple to reproduce! I'm glad I could help. Thank you for fixing this (and all your work)!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116061
No description provided.