Fix #116061: BoneCollection ID property user count handling incorrect

Ensure that `armature_free_data(ID *id)` (the `IDTypeInfo::free_data`
function) does not decrement user counts for ID properties of type 'pointer'.