source/blender/animrig/intern/bone_collections.cc
@@ -73,13 +73,13 @@ BoneCollection *ANIM_bonecoll_new(const char *name)
   return bcoll;
 }
 
-void ANIM_bonecoll_free(BoneCollection *bcoll)
+void ANIM_bonecoll_free(BoneCollection *bcoll, const bool do_id_user_count)
 {
   BLI_assert_msg(BLI_listbase_is_empty(&bcoll->bones),
                  "bone collection still has bones assigned to it, will cause dangling pointers in "
                  "bone runtime data");
   if (bcoll->prop) {
-    IDP_FreeProperty(bcoll->prop);
+    IDP_FreeProperty_ex(bcoll->prop, do_id_user_count);
   }
   MEM_delete(bcoll);
 }
